<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="button_1">Arithmetic Calculations</string>
    <string name="button_2">Polynomials</string>
    <string name="button_3">Trigonometry</string>
    <string name="button_4">Complex Calculations</string>
    <string name="button_5">Time</string>

    <string name="button_calculate">Calculate</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="version">V-1.0</string>
    <string name="rdate">25.06.16</string>
    <string name="title_activity_nav_menu">navMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
