<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_simplemath"
        android:title="@string/button_1"
        android:icon="@drawable/ic_menu_manage"
        app:showAsAction="never"/>

    <item android:id="@+id/action_complexmath"
        android:title="@string/button_4"
        app:showAsAction="never"/>

    <item android:id="@+id/action_solvepoly"
        android:title="@string/button_2"
        app:showAsAction="never"/>

    <item android:id="@+id/action_anglemath"
        android:title="@string/button_3"
        app:showAsAction="never"/>

    <item android:id="@+id/action_timemath"
        android:title="@string/button_5"
        app:showAsAction="never"/>


</menu>