<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="thelarsinator.simplecalculator.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/button_1"
        android:onClick="goToSimpleMath"
        android:layout_gravity="center"
        android:textAllCaps="false"
    />

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/button_4"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:onClick="goToComplex"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/button_2"
        android:onClick="goToPolynomials"
        android:layout_gravity="center"
        android:textAllCaps="false"
    />

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/button_3"
        android:onClick="goToAngle"
        android:layout_gravity="center"
        android:textAllCaps="false"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text = "@string/button_5"
        android:onClick="goToTime"
        android:layout_gravity="center"
        android:textAllCaps="false"/>
</LinearLayout>
</ScrollView>